--- a/package.json
+++ b/package.json
@@ -36,9 +36,14 @@
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.3.6",
+		"theme-change": "^2.5.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource-variable/exo-2": "^5.0.19",
+		"@fontsource/kode-mono": "^5.0.3"
+	}
 }
